manifest/k8s-student-manager-config.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-student-manager
  labels:
    app: k8s-student-details-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-student-details-core
  template:
    metadata:
      labels:
        app: k8s-student-details-core
    spec:
      containers:
      - name: k8s-student-details-core
        image: k8s-student-details-core:latest
        imagePullPolicy: Never
        ports:
          - containerPort: 10000
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
      - name: tls-sidecar
        image: nginx
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: secret-volume
            mountPath: /app/cert
          - name: config-volume
            mountPath: /etc/nginx/nginx.conf
            subPath: nginx.conf
      volumes:
        - name: secret-volume
          secret:
            secretName: sidecar-nginx-certs
            items:
              - key: core-server-cert
                path: hms.crt
              - key: core-server-key
                path: hms.key
        - name: config-volume
          configMap:
            name: sidecar-nginx-conf

---
apiVersion: v1
kind: Service
metadata:
  name: k8s-student-manager-service
spec:
  type: NodePort
  selector:
    app: k8s-student-details-core
  ports:
    - protocol: TCP
      port: 10000
      targetPort: 10000
      nodePort: 30200
